experiments/activitynet/log.txt.2018-04-16_11-56-35
  File "./experiments/activitynet/train_net.py", line 88
    print '{:d} roidb entries'.format(len(roidb))
                             ^
SyntaxError: invalid syntax
